# autoclicker

./: ArgParser.cpp  ArgParser.h  CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h  commands.cpp  commands.h  main.cpp  readme.md  utils.h
devices/: VirtualDevice.cpp  VirtualDevice.h  VirtualMouse.cpp  VirtualMouse.h  utils.h
examples/: mouse_reset  move_mouse_around
src/: main.cpp
src/cli/: ArgParser.cpp  ArgParser.h
src/core/: CommandExecutor.cpp  CommandExecutor.h  commands.cpp  commands.h  utils.cpp  utils.h
src/core/dev/: VirtualDevice.cpp  VirtualDevice.h  VirtualMouse.cpp  VirtualMouse.h
